[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sulcus-langchain"
version = "0.1.0"
description = "LangChain memory backend for Sulcus thermodynamic memory"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Dooley / dforge", email = "hello@dforge.ca" },
]
keywords = ["sulcus", "langchain", "memory", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sulcus>=0.1.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
async = [
    "httpx>=0.25.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://sulcus.ca"
Repository = "https://github.com/dforge/sulcus"
Documentation = "https://docs.sulcus.ca"

[tool.hatch.build.targets.wheel]
packages = ["sulcus_langchain"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
